sea-query-attr/tests/compile-fail/enum.rs
use sea_query_attr::enum_def;

#[enum_def]
enum Hello {
    Name,
}

fn main() {}
