sea-query-attr/tests/compile-fail/enum.stderr
error: #[enum_def] can only be used on structs
 --> tests/compile-fail/enum.rs:4:1
  |
4 | enum Hello {
  | ^^^^
